chore(vscode): add/change settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,7 +15,7 @@
   },
   "cSpell.maxNumberOfProblems": 8,
   "cSpell.numSuggestions": 24,
-  "cSpell.words": [],
+  "cSpell.words": ["Évelyne", "Lachance", "Hendry", "typedoc", "realware", "commitlint", "favware", "tsbuildinfo", "vite", "tailwindcss"],
   "search.exclude": {
     "**/.docusaurus/": true,
     "**/.git/": true,
