--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "private": true,
   "scripts": {
     "clean": "rimraf dist node_modules/.cache",
+    "import-docs": "node scripts/import-docs.mjs",
+    "docs": "yarn workspaces run docs && yarn import-docs",
     "lint": "eslint src --ext tsx --fix",
     "format": "prettier --write src/**/*.tsx",
     "update": "yarn upgrade-interact --latest",
@@ -24,7 +26,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "solid-js": "^1.3.3"
+    "solid-js": "^1.3.3",
+    "typedoc": "^0.22.11"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.1.0",
@@ -34,9 +37,11 @@
     "@types/node": "^17.0.12",
     "@types/tailwindcss": "^3.0.3",
     "autoprefixer": "^10.4.2",
+    "colorette": "^2.0.16",
     "eslint": "~8.6.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.2",
+    "ora": "^6.0.1",
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
     "pretty-quick": "^3.1.3",
