--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "solid-js": "^1.3.3",
-    "typedoc": "^0.22.11"
+    "solid-js": "^1.3.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.1.0",
@@ -46,6 +45,7 @@
     "prettier": "^2.5.1",
     "pretty-quick": "^3.1.3",
     "tailwindcss": "^3.0.17",
+    "typedoc": "^0.22.11",
     "typescript": "^4.5.5",
     "vite": "^2.7.13",
     "vite-plugin-solid": "^2.2.5"
