--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   ],
   "license": "Apache-2.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "clean": "rimraf dist node_modules/.cache",
+    "clean": "rimraf backend/dist dist node_modules/.cache",
     "import-docs": "node scripts/import-docs.mjs",
     "docs": "yarn workspaces run docs && yarn import-docs",
     "lint": "eslint src --ext tsx --fix",
@@ -31,6 +32,7 @@
   "devDependencies": {
     "@commitlint/cli": "^16.1.0",
     "@commitlint/config-conventional": "^16.0.0",
+    "@mdx-js/rollup": "^2.0.0-rc.1",
     "@sapphire/eslint-config": "^4.0.11",
     "@sapphire/ts-config": "^3.1.8",
     "@types/node": "^17.0.12",
@@ -44,6 +46,8 @@
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
     "pretty-quick": "^3.1.3",
+    "solid-app-router": "^0.2.1",
+    "solid-mdx": "^0.0.5",
     "tailwindcss": "^3.0.17",
     "typedoc": "^0.22.11",
     "typescript": "^4.5.5",
