--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,4 +1,4 @@
 {
   "extends": "./tsconfig.base.json",
-  "include": ["src", "scripts", "vite.config.ts", "tailwind.config.js", "postcss.config.js"]
+  "include": ["src", "scripts", "vite.config.ts", "tailwind.config.cjs", "postcss.config.cjs"]
 }
