--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@mdx-js/rollup": "^2.0.0-rc.1",
     "@sapphire/eslint-config": "^4.0.11",
     "@sapphire/ts-config": "^3.1.8",
+    "@tailwindcss/forms": "^0.4.0",
     "@types/node": "^17.0.12",
     "@types/tailwindcss": "^3.0.3",
     "autoprefixer": "^10.4.2",
