--- a/.github/workflows/update-submodules.yml
+++ b/.github/workflows/update-submodules.yml
@@ -17,7 +17,7 @@ jobs:
 
           echo -e "\n# Checkout the repo in the target branch"
           TARGET_BRANCH="main"
-          git clone --recursive-submodules -j8 -b $TARGET_BRANCH $REPO website
+          git clone --recurse-submodules -j8 -b $TARGET_BRANCH $REPO website
 
           echo -e "\n# Move to newly checked-out branch"
           cd website
