--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
     "@sapphire/eslint-config": "^4.0.11",
     "@sapphire/ts-config": "^3.1.8",
     "@tailwindcss/forms": "^0.4.0",
+    "@types/highlight.js": "^10.1.0",
     "@types/node": "^17.0.12",
     "@types/tailwindcss": "^3.0.3",
     "autoprefixer": "^10.4.2",
     "colorette": "^2.0.16",
     "eslint": "~8.6.0",
+    "highlight.js": "^11.4.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.2",
     "ora": "^6.0.1",
