feat(docs): add sidebar and styling

--- a/.markdownlint-cli2.jsonc
+++ b/.markdownlint-cli2.jsonc
@@ -5,7 +5,10 @@
     "MD003": true,
     "MD009": true,
     "MD011": true,
-    "MD012": true
+    "MD012": true,
+    "MD013": {
+      "line_length": 120
+    }
   },
-  "globs": ["src/docs/{General,Guide}/**/*.md"]
+  "globs": ["src/docs/{General,Guide}/**/*.{md,mdx}"]
 }
