feat(guide): add migrating-from-enmap

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,7 +26,9 @@
     "tsbuildinfo",
     "vite",
     "tailwindcss",
-    "colorette"
+    "colorette",
+    "Enmap",
+    "semibold"
   ],
   "search.exclude": {
     "**/.docusaurus/": true,
