--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "docs": "yarn workspaces run docs && yarn import-docs",
     "lint": "eslint src --ext tsx --fix",
     "format": "prettier --write src/**/*.tsx",
-    "update": "yarn upgrade-interact --latest",
+    "update": "yarn upgrade-interactive --latest",
     "start": "vite",
     "build": "vite build",
     "dev": "yarn build && yarn start",
@@ -35,7 +35,6 @@
     "@mdx-js/rollup": "^2.0.0-rc.1",
     "@sapphire/eslint-config": "^4.0.11",
     "@sapphire/ts-config": "^3.1.8",
-    "@types/highlight.js": "^10.1.0",
     "@types/node": "^17.0.12",
     "@types/tailwindcss": "^3.0.3",
     "autoprefixer": "^10.4.2",
@@ -49,7 +48,7 @@
     "prettier": "^2.5.1",
     "pretty-quick": "^3.1.3",
     "solid-app-router": "^0.2.1",
-    "solid-mdx": "^0.0.5",
+    "solid-mdx": "^0.0.6",
     "tailwindcss": "^3.0.17",
     "typedoc": "^0.22.11",
     "typescript": "^4.5.5",
