--- a/.prettierrc
+++ b/.prettierrc
@@ -14,6 +14,7 @@
   "quoteProps": "as-needed",
   "semi": true,
   "singleQuote": true,
+  "jsxSingleQuote": true,
   "tabWidth": 2,
   "trailingComma": "none",
   "useTabs": false
