--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "clean": "rimraf  dist node_modules/.cache",
     "import-docs": "node scripts/import-docs.mjs",
     "docs": "yarn workspaces run docs && yarn import-docs",
-    "lint": "eslint src --ext tsx --fix",
-    "format": "prettier --write src/**/*.tsx",
+    "lint": "eslint src --ext ts,tsx --fix",
+    "format": "prettier --write src/**/*.{ts,tsx}",
     "update": "yarn upgrade-interactive --latest",
     "start": "vite",
     "build": "vite build",
@@ -35,6 +35,7 @@
     "@mdx-js/rollup": "^2.0.0-rc.1",
     "@sapphire/eslint-config": "^4.0.11",
     "@sapphire/ts-config": "^3.1.8",
+    "@sapphire/utilities": "^3.3.0",
     "@types/node": "^17.0.12",
     "@types/tailwindcss": "^3.0.3",
     "autoprefixer": "^10.4.2",
